feat : 정산 홈 view 조회 api